@startuml

package "Model" {
    class Alumno
    class Tutor
    class Tutoria
    class SolicitudTutoria

    class AlumnoDAO
    class TutorDAO
    class TutoriaDAO
    class SolicitudTutoriaDAO
}

package "Controller (Servlets)" {
    class SeleccionRolServlet
    class ConsultarTutoriasServlet
    class RegistrarTutoriaServlet
    class AceptarTutoriaServlet
    class VerTutoriasServlet
    class VerTutoriasAceptadasServlet
}

package "View (JSP)" {
    class "index.jsp"
    class "tutoriasDisponibles.jsp"
    class "verTutorias.jsp"
    class "verTutoriasAceptadas.jsp"
    class "registrarTutoria.jsp"
    class "usuario.jsp"
}


AlumnoDAO --> Alumno
TutorDAO --> Tutor
TutoriaDAO --> Tutoria
SolicitudTutoriaDAO --> SolicitudTutoria


ConsultarTutoriasServlet --> TutoriaDAO
RegistrarTutoriaServlet --> TutoriaDAO
AceptarTutoriaServlet --> SolicitudTutoriaDAO
VerTutoriasServlet --> TutoriaDAO
VerTutoriasAceptadasServlet --> SolicitudTutoriaDAO


ConsultarTutoriasServlet --> "tutoriasDisponibles.jsp"
RegistrarTutoriaServlet --> "registrarTutoria.jsp"
AceptarTutoriaServlet --> "verTutoriasAceptadas.jsp"
VerTutoriasServlet --> "verTutorias.jsp"
VerTutoriasAceptadasServlet --> "verTutoriasAceptadas.jsp"
SeleccionRolServlet --> "index.jsp"

@enduml
